# DE-Shaw-Code-Sample

./: .gitignore  README.md  de_shaw_code_sample.md  project_instructions.md  tiny_file.md
benchmark/: .gitignore
benchmark/input/: allfiles.txt  benchmark.txt
benchmark/scripts/: .pre-commit-config-template.yaml  env.sh  requirements.in
benchmark/scripts/config/: mypy.ini
benchmark/src/: credit_benchmark.py  credit_visualize.py  sms_size_benchmark.py  sms_size_visualize.py  util.py
tiny_file/: .clang-format
tiny_file/client/: CMakeLists.txt
tiny_file/client/app/: App.cpp  CMakeLists.txt
tiny_file/client/include/: ClientDispatcherWorker.hpp  ClientFileCompressorHandler.hpp  ClientFileCompressorWorker.hpp  Servicer.hpp
tiny_file/client/src/: ClientDispatcherWorker.cpp  ClientFileCompressorHandler.cpp  ClientFileCompressorWorker.cpp  Servicer.cpp
tiny_file/service/: CMakeLists.txt
tiny_file/service/include/: RegistrationVisitor.hpp  RegistrationWorker.hpp  ServiceFileCompressorHandler.hpp  ServiceFileCompressorWorker.hpp  snappy-stubs-public.h  snappy.h
tiny_file/service/include/scheduling/: CreditSchedulingStrategy.hpp  ISchedulingStrategy.hpp  RoundRobinSchedulingStrategy.hpp  Scheduler.hpp
tiny_file/service/src/: RegistrationVisitor.cpp  RegistrationWorker.cpp  ServiceFileCompressorHandler.cpp  ServiceFileCompressorWorker.cpp  main.cpp
tiny_file/service/src/scheduling/: CreditSchedulingStrategy.cpp  RoundRobinSchedulingStrategy.cpp  Scheduler.cpp
tiny_file/service/tests/: CMakeLists.txt  MQMessages.cpp  ShmMessages.cpp  ShmTests.cpp
tiny_file/shared/include/: AbstractWorker.hpp  ArgParse.hpp  CommunicationManager.hpp  IMQMessage.hpp  IShmMessage.hpp  IShmMessageHandler.hpp  Util.hpp
tiny_file/shared/include/mq_client_message/: AbstractMQClientMessage.hpp  AbstractMQClientRegistrationMessage.hpp  MQClientMessageType.hpp  MQClientQueueCreationMessage.hpp  MQClientQueueDeletionMessage.hpp  MQClientRegistrationMessage.hpp  MQClientRequestMessage.hpp
tiny_file/shared/include/mq_server_message/: AbstractMQServerMessage.hpp  MQServerIdMessage.hpp  MQServerMessageType.hpp  MQServerRequestMessage.hpp
tiny_file/shared/include/shm/: AbstractShmSegment.hpp  ContiguousShmSegment.hpp  FragmentedShmSegment.hpp  ShmManager.hpp
tiny_file/shared/include/shm_client_message/: AbstractShmClientMessage.hpp  ShmClientDataMessage.hpp
tiny_file/shared/include/shm_server_message/: AbstractShmServerMessage.hpp  ShmServerDataMessage.hpp  ShmServerFileMessage.hpp
tiny_file/shared/src/: AbstractWorker.cpp  CommunicationManager.cpp
tiny_file/shared/src/mq_client_message/: AbstractMQClientMessage.cpp  AbstractMQClientRegistrationMessage.cpp  MQClientQueueCreationMessage.cpp  MQClientQueueDeletionMessage.cpp  MQClientRegistrationMessage.cpp  MQClientRequestMessage.cpp
tiny_file/shared/src/mq_server_message/: AbstractMQServerMessage.cpp  MQServerIdMessage.cpp  MQServerRequestMessage.cpp
tiny_file/shared/src/shm/: AbstractShmSegment.cpp  ContiguousShmSegment.cpp  FragmentedShmSegment.cpp  ShmManager.cpp
tiny_file/shared/src/shm_client_message/: ShmClientDataMessage.cpp
tiny_file/shared/src/shm_server_message/: ShmServerDataMessage.cpp  ShmServerFileMessage.cpp
